samples/_failures_safe/1761073590_ad5634_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ebfbdf56.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_ebfbdf56.c:163:9: error: expected declaration or statement at end of input
  163 |         parser_advance(parser);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_ebfbdf56.c:163:9: error: expected declaration or statement at end of input
